trasitino resolved. Main-Page Done

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
           continue to do so.
         </h4>
         <button>
-          <img src="assets/rightarrow.jpg" alt="" />
+          <h4>View More</h4>
+          <!-- <img src="assets/rightarrow.jpg" alt="" /> -->
         </button>
       </div>
     </div>
