--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hiba Azhar Portfolio</title>
+    <link rel="stylesheet" href="global.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="bg-img">
       <img src="assets/bg.JPG" alt="" />
-      <div class="darkness"></div>
       <div class="main-page-content">
         <h1>My Portfolio</h1>
         <img src="assets/main-pic.jpeg" alt="" />
@@ -22,9 +22,8 @@
           My career-based skills have radically evolved overtime and will
           continue to do so.
         </h4>
-        <button>
-          <h4>View More</h4>
-          <!-- <img src="assets/rightarrow.jpg" alt="" /> -->
+        <button class="view-more-btn">
+          <a href="/myself.html"><h4>View More</h4></a>
         </button>
       </div>
     </div>
