Menu page remaining

--- a/myself.html
+++ b/myself.html
@@ -14,7 +14,9 @@
         <div class="navbar">
           <div class="navbar-content">
             <img src="assets/H.svg" alt="" />
-            <img src="assets/beforeHoverHamburder.svg" alt="" />
+            <a href="/menu.html">
+              <img class="ham-btn" src="assets/beforeHoverHamburger.svg" alt=""
+            /></a>
           </div>
         </div>
         <div class="main-content">
@@ -23,11 +25,11 @@
             I am a dedicated software engineer and technology enthusiast with a
             strong passion for innovation and problem-solving. With expertise in
             front-end development, I specialize in crafting seamless and
-            user-centric digital experiences. My technical proficiency in HTML,
-            CSS, JavaScript, and React, combined with a keen eye for design and
-            functionality, allows me to build high-performance web applications.
-            I am always eager to learn, adapt, and contribute to projects that
-            drive technological advancement.
+            user-centric digital experiences. My technical proficiency MERN
+            tech, combined with a keen eye for design and functionality, allows
+            me to build high-performance web applications. I am always eager to
+            learn, adapt, and contribute to projects that drive technological
+            advancement.
           </p>
           <img class="myself-img" src="assets/Myself.PNG" alt="" />
           <h2 class="yellow-heading">My Mission</h2>
