--- a/menu.html
+++ b/menu.html
@@ -24,7 +24,7 @@
           <a href="/index.html">
             <h1>Projects</h1>
           </a>
-          <a href="/index.html">
+          <a href="/contact.html">
             <h1>Contact</h1>
           </a>
         </div>
