in services, projects is remaining

--- a/menu.html
+++ b/menu.html
@@ -18,11 +18,11 @@
           <a href="/index.html">
             <h1>Resume</h1>
           </a>
-          <a href="/index.html">
+          <a href="/achievements.html">
             <h1>Achievements</h1>
           </a>
-          <a href="/index.html">
-            <h1>Projects</h1>
+          <a href="/services.html">
+            <h1>Services</h1>
           </a>
           <a href="/contact.html">
             <h1>Contact</h1>
