projects completed, footer is left

--- a/services.html
+++ b/services.html
@@ -82,9 +82,54 @@
           </div>
           <!-- design card ends -->
         </div>
-
-        <div class="projects"></div>
+        <h1>Projects</h1>
+        <div class="projects">
+          <div class="project-card">
+            <img src="assets/flower.PNG" alt="" />
+            <h3>
+              Flower Landing Page using HTML, CSS, JS, Bootstrap and React
+            </h3>
+          </div>
+          <!-- flower ends -->
+          <div class="project-card">
+            <img src="assets/coffee.PNG" alt="" />
+            <h3>Coffee Landing Page using HTML, CSS, JS</h3>
+          </div>
+          <!-- coffee ends -->
+          <div class="project-card">
+            <img src="assets/learnify.PNG" alt="" />
+            <h3>A Multimedia Manager for students using HMTL, CSS and JS</h3>
+          </div>
+          <!-- multimedia ends -->
+          <div class="project-card">
+            <img src="assets/spaceinvaders.jpg" alt="" />
+            <h3>Space Invader using Core Java Programming concepts</h3>
+          </div>
+          <!-- space invaders ends -->
+          <div class="project-card">
+            <img src="assets/dino.jpg" alt="" />
+            <h3>Dino game using Core Java Programming concepts</h3>
+          </div>
+          <!-- dino  ends -->
+          <div class="project-card">
+            <img src="assets/flappy.jpg" alt="" />
+            <h3>Flappy Bird game using Core Java Programming concepts</h3>
+          </div>
+          <!-- flappy bird ends -->
+          <div class="project-card">
+            <img src="assets/Netflix1.jpg" alt="" />
+            <h3>Netflix UI Clone using Vanilla Web tools</h3>
+          </div>
+          <!-- netflix ends -->
+          <div class="project-card">
+            <img src="assets/notepad.jpg" alt="" />
+            <h3>
+              A Web-Scraping Notepad using Java and Python automation scripts
+            </h3>
+          </div>
+        </div>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
