acievements added, resume is left

--- a/achievements.html
+++ b/achievements.html
@@ -19,6 +19,20 @@
             /></a>
           </div>
         </div>
+        <h1 class="yellow-heading">Achievements</h1>
+        <div class="images">
+          <img src="assets/certificates/c1.PNG" alt="" />
+          <img src="assets/certificates/c2.PNG" alt="" />
+          <img src="assets/certificates/c3.PNG" alt="" />
+          <img src="assets/certificates/c9.PNG" alt="" />
+          <img src="assets/certificates/c4.PNG" alt="" />
+          <img src="assets/certificates/c5.PNG" alt="" />
+          <img src="assets/certificates/c6.PNG" alt="" />
+          <img src="assets/certificates/c7.PNG" alt="" />
+          <img src="assets/certificates/c10.PNG" alt="" />
+          <img src="assets/certificates/c8.PNG" alt="" />
+        </div>
+        <!-- images div ends  -->
       </div>
     </div>
   </body>
