--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Achievements</title>
+    <title>Services</title>
     <link rel="stylesheet" href="global.css" />
     <link rel="stylesheet" href="services.css" />
   </head>
@@ -96,10 +96,12 @@
             <h3>Coffee Landing Page using HTML, CSS, JS</h3>
           </div>
           <!-- coffee ends -->
+
           <div class="project-card">
             <img src="assets/learnify.PNG" alt="" />
             <h3>A Multimedia Manager for students using HMTL, CSS and JS</h3>
           </div>
+
           <!-- multimedia ends -->
           <div class="project-card">
             <img src="assets/spaceinvaders.jpg" alt="" />
@@ -107,26 +109,37 @@
           </div>
           <!-- space invaders ends -->
           <div class="project-card">
-            <img src="assets/dino.jpg" alt="" />
-            <h3>Dino game using Core Java Programming concepts</h3>
-          </div>
-          <!-- dino  ends -->
-          <div class="project-card">
             <img src="assets/flappy.jpg" alt="" />
             <h3>Flappy Bird game using Core Java Programming concepts</h3>
           </div>
           <!-- flappy bird ends -->
+
+          <div class="project-card">
+            <img src="assets/dino.jpg" alt="" />
+            <h3>Dino game using Core Java Programming concepts</h3>
+          </div>
+          <!-- dino  ends -->
+
           <div class="project-card">
             <img src="assets/Netflix1.jpg" alt="" />
             <h3>Netflix UI Clone using Vanilla Web tools</h3>
           </div>
           <!-- netflix ends -->
           <div class="project-card">
+            <img src="assets/imageGallery.PNG" alt="" />
+            <h3>
+              An Image gallery to showcase the most beautiful flowers on your
+              webpage
+            </h3>
+          </div>
+          <!-- imageGallery ends -->
+          <div class="project-card">
             <img src="assets/notepad.jpg" alt="" />
             <h3>
               A Web-Scraping Notepad using Java and Python automation scripts
             </h3>
           </div>
+          <!-- notepad ends -->
         </div>
       </div>
     </div>
