resume posrtion half completed

--- a/menu.html
+++ b/menu.html
@@ -15,7 +15,7 @@
           <a href="/index.html">
             <h1>Home</h1>
           </a>
-          <a href="/index.html">
+          <a href="/resume.html">
             <h1>Resume</h1>
           </a>
           <a href="/achievements.html">
