--- a/resume.html
+++ b/resume.html
@@ -19,6 +19,134 @@
             /></a>
           </div>
         </div>
+        <h1 class="yellow center mt-3">Education</h1>
+        <div class="education-section">
+          <div class="education-text">
+            <h1>
+              Empowered by
+              <span class="yellow">knowledge</span>
+              , driven by
+              <span class="yellow">innovation</span>
+              —my journey is just the beginning.
+            </h1>
+          </div>
+          <!-- education text ends -->
+          <div class="education-list">
+            <ul>
+              <li>
+                <h3>Bachelors of Science (Software Engineering)</h3>
+                <span>2020 - 2024</span>
+                <h3 class="yellow">Sukkur IBA Unviersity</h3>
+              </li>
+              <li>
+                <h3>
+                  Federal Board of Intermediate and Secondary Education (HSSC)
+                </h3>
+                <span>2017 - 2019</span>
+                <h3 class="yellow">Army Public School and College Sukkur</h3>
+              </li>
+              <li>
+                <h3>
+                  Federal Board of Intermediate and Secondary Education (SSC)
+                </h3>
+                <span>2015 - 2017</span>
+                <h3 class="yellow">Army Public School and College Sukkur</h3>
+              </li>
+            </ul>
+          </div>
+          <hr />
+        </div>
+        <h1 class="yellow mt-5 center">Skills</h1>
+        <div class="skills-section">
+          <div class="skills-text mt-3">
+            <h1>
+              Skills are the bridge between
+              <span class="yellow">knowledge</span> and
+              <span class="yellow">success</span> — master them, and you master
+              your <span class="yellow">future</span>.
+            </h1>
+          </div>
+        </div>
+        <div class="experience-section">
+          <h1 class="yellow mt-5 center">Tools</h1>
+          <div class="slider mt-5">
+            <div class="card-container">
+              <div class="card">
+                <img
+                  class="w-50"
+                  src="assets/devicon-plain_notion.svg"
+                  alt=""
+                />
+                <h3>Notion</h3>
+              </div>
+              <div class="card">
+                <img class="w-50" src="assets/devicon_git.svg" alt="" />
+                <h3>Git</h3>
+              </div>
+              <div class="card">
+                <img
+                  class="w-50"
+                  src="assets/flowbite_github-solid.svg"
+                  alt=""
+                />
+                <h3>Github</h3>
+              </div>
+              <div class="card">
+                <img class="w-50" src="assets/miro.svg" alt="" />
+                <h3>Miro</h3>
+              </div>
+              <div class="card">
+                <img
+                  src="assets/material-icon-theme_figma.svg"
+                  class="w-50"
+                  alt=""
+                />
+                <h3>Figma</h3>
+              </div>
+              <div class="card">
+                <img src="assets/logos_intellij-idea.svg" class="w-50" alt="" />
+                <h3>IntelliJ</h3>
+              </div>
+              <!-- Duplicate cards for smooth looping effect -->
+              <div class="card">
+                <img
+                  class="w-50"
+                  src="assets/devicon-plain_notion.svg"
+                  alt=""
+                />
+                <h3>Notion</h3>
+              </div>
+              <div class="card">
+                <img class="w-50" src="assets/devicon_git.svg" alt="" />
+                <h3>Git</h3>
+              </div>
+              <div class="card">
+                <img
+                  class="w-50"
+                  src="assets/flowbite_github-solid.svg"
+                  alt=""
+                />
+                <h3>Github</h3>
+              </div>
+              <div class="card">
+                <img class="w-50" src="assets/miro.svg" alt="" />
+                <h3>Miro</h3>
+              </div>
+              <div class="card">
+                <img
+                  src="assets/material-icon-theme_figma.svg"
+                  class="w-50"
+                  alt=""
+                />
+                <h3>Figma</h3>
+              </div>
+              <div class="card">
+                <img src="assets/logos_intellij-idea.svg" class="w-50" alt="" />
+                <h3>IntelliJ</h3>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
