Now only footer is left

--- a/resume.html
+++ b/resume.html
@@ -58,7 +58,7 @@
         </div>
         <h1 class="yellow mt-5 center">Skills</h1>
         <div class="skills-section">
-          <div class="skills-text mt-3">
+          <div class="skills-text">
             <h1>
               Skills are the bridge between
               <span class="yellow">knowledge</span> and
@@ -66,10 +66,54 @@
               your <span class="yellow">future</span>.
             </h1>
           </div>
+          <div class="skill-bars-portion">
+            <div class="pb-card">
+              <div class="pb-spans"><span>HTML/CSS</span> <span>95%</span></div>
+              <progress value="95" max="100"></progress>
+            </div>
+
+            <div class="pb-card">
+              <div class="pb-spans">
+                <span>Bootstrap</span> <span>90%</span>
+              </div>
+              <progress value="90" max="100"></progress>
+            </div>
+            <div class="pb-card">
+              <div class="pb-spans">
+                <span>Javascript</span> <span>75%</span>
+              </div>
+              <progress value="75" max="100"></progress>
+            </div>
+            <div class="pb-card">
+              <div class="pb-spans"><span>React.js</span> <span>40%</span></div>
+              <progress value="40" max="100"></progress>
+            </div>
+            <div class="pb-card">
+              <div class="pb-spans"><span>OOP</span> <span>80%</span></div>
+              <progress value="80" max="100"></progress>
+            </div>
+            <div class="pb-card">
+              <div class="pb-spans">
+                <span>Core Java</span> <span>90%</span>
+              </div>
+              <progress value="90" max="100"></progress>
+            </div>
+            <div class="pb-card">
+              <div class="pb-spans"><span>C++</span> <span>50%</span></div>
+              <progress value="50" max="100"></progress>
+            </div>
+            <div class="pb-card">
+              <div class="pb-spans">
+                <span>Data Structures</span> <span>80%</span>
+              </div>
+              <progress value="80" max="100"></progress>
+            </div>
+          </div>
+          <hr />
         </div>
-        <div class="experience-section">
-          <h1 class="yellow mt-5 center">Tools</h1>
-          <div class="slider mt-5">
+        <h1 class="yellow mt-5 center">Tools</h1>
+        <div class="experience-section mt-3">
+          <div class="slider">
             <div class="card-container">
               <div class="card">
                 <img
