Only transitions left

--- a/contact.html
+++ b/contact.html
@@ -70,6 +70,16 @@
             <button class="cv">Submit</button>
           </div>
         </div>
+        <hr class="horizontal" />
+        <footer>
+          <img src="assets/H.svg" alt="" />
+          <h3>
+            Copyright 2025 All rights reserved |
+            <a href="https://www.linkedin.com/in/hiba-azhar-a86798317/"
+              >Hiba Azhar</a
+            >
+          </h3>
+        </footer>
       </div>
     </div>
   </body>
