--- a/resume.html
+++ b/resume.html
@@ -54,7 +54,7 @@
               </li>
             </ul>
           </div>
-          <hr />
+          <hr class="vertical" />
         </div>
         <h1 class="yellow mt-5 center">Skills</h1>
         <div class="skills-section">
@@ -109,7 +109,7 @@
               <progress value="80" max="100"></progress>
             </div>
           </div>
-          <hr />
+          <hr class="vertical" />
         </div>
         <h1 class="yellow mt-5 center">Tools</h1>
         <div class="experience-section mt-3">
@@ -191,6 +191,16 @@
             </div>
           </div>
         </div>
+        <hr class="horizontal" />
+        <footer>
+          <img src="assets/H.svg" alt="" />
+          <h3>
+            Copyright 2025 All rights reserved |
+            <a href="https://www.linkedin.com/in/hiba-azhar-a86798317/"
+              >Hiba Azhar</a
+            >
+          </h3>
+        </footer>
       </div>
     </div>
   </body>
