--- a/services.html
+++ b/services.html
@@ -141,6 +141,16 @@
           </div>
           <!-- notepad ends -->
         </div>
+        <hr class="horizontal" />
+        <footer>
+          <img src="assets/H.svg" alt="" />
+          <h3>
+            Copyright 2025 All rights reserved |
+            <a href="https://www.linkedin.com/in/hiba-azhar-a86798317/"
+              >Hiba Azhar</a
+            >
+          </h3>
+        </footer>
       </div>
     </div>
     <script src="script.js"></script>
