--- a/achievements.html
+++ b/achievements.html
@@ -33,6 +33,16 @@
           <img src="assets/certificates/c8.PNG" alt="" />
         </div>
         <!-- images div ends  -->
+        <hr class="horizontal" />
+        <footer>
+          <img src="assets/H.svg" alt="" />
+          <h3>
+            Copyright 2025 All rights reserved |
+            <a href="https://www.linkedin.com/in/hiba-azhar-a86798317/"
+              >Hiba Azhar</a
+            >
+          </h3>
+        </footer>
       </div>
     </div>
   </body>
