--- a/myself.html
+++ b/myself.html
@@ -43,6 +43,16 @@
             only evolves but also positively impacts lives.
           </p>
         </div>
+        <hr class="horizontal" />
+        <footer>
+          <img src="assets/H.svg" alt="" />
+          <h3>
+            Copyright 2025 All rights reserved |
+            <a href="https://www.linkedin.com/in/hiba-azhar-a86798317/"
+              >Hiba Azhar</a
+            >
+          </h3>
+        </footer>
       </div>
     </div>
   </body>
