--- a/services.html
+++ b/services.html
@@ -58,7 +58,7 @@
           <div class="service-card">
             <div class="service-name">
               <img src="assets/python.svg" alt="" />
-              <h2 class="service-name">Pyhton Automation</h2>
+              <h2 class="service-name">Python Automation</h2>
             </div>
 
             <h3 class="service-description">
