Services and Resume Modified

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
           My career-based skills have radically evolved overtime and will
           continue to do so.
         </h4>
+        <a href="/myself.html"></a>
         <button class="view-more-btn">
-          <a href="/myself.html"><h4>View More</h4></a>
+          <h4>View More</h4></a>
         </button>
       </div>
     </div>
