--- a/resume.html
+++ b/resume.html
@@ -99,8 +99,8 @@
               <progress value="90" max="100"></progress>
             </div>
             <div class="pb-card">
-              <div class="pb-spans"><span>C++</span> <span>50%</span></div>
-              <progress value="50" max="100"></progress>
+              <div class="pb-spans"><span>Next.js</span> <span>60%</span></div>
+              <progress value="60" max="100"></progress>
             </div>
             <div class="pb-card">
               <div class="pb-spans">
@@ -108,7 +108,30 @@
               </div>
               <progress value="80" max="100"></progress>
             </div>
+            <div class="pb-card">
+              <div class="pb-spans">
+                <span>Tailwind CSS</span> <span>80%</span>
+              </div>
+              <progress value="80" max="100"></progress>
+            </div>
+            <div class="pb-card">
+              <div class="pb-spans">
+                <span>Database Management</span> <span>50%</span>
+              </div>
+              <progress value="50" max="100"></progress>
+            </div>
+            <div class="pb-card">
+              <div class="pb-spans">
+                <span>Deployment</span> <span>100%</span>
+              </div>
+              <progress value="100" max="100"></progress>
+            </div>
+            <div class="pb-card">
+              <div class="pb-spans"><span>Testing</span> <span>30%</span></div>
+              <progress value="30" max="100"></progress>
+            </div>
           </div>
+
           <hr class="vertical" />
         </div>
         <h1 class="yellow mt-5 center">Tools</h1>
@@ -123,42 +146,15 @@
                 />
                 <h3>Notion</h3>
               </div>
-              <div class="card">
-                <img class="w-50" src="assets/devicon_git.svg" alt="" />
-                <h3>Git</h3>
-              </div>
-              <div class="card">
-                <img
-                  class="w-50"
-                  src="assets/flowbite_github-solid.svg"
-                  alt=""
-                />
-                <h3>Github</h3>
-              </div>
+
               <div class="card">
                 <img class="w-50" src="assets/miro.svg" alt="" />
                 <h3>Miro</h3>
               </div>
-              <div class="card">
-                <img
-                  src="assets/material-icon-theme_figma.svg"
-                  class="w-50"
-                  alt=""
-                />
-                <h3>Figma</h3>
-              </div>
+
               <div class="card">
                 <img src="assets/logos_intellij-idea.svg" class="w-50" alt="" />
                 <h3>IntelliJ</h3>
-              </div>
-              <!-- Duplicate cards for smooth looping effect -->
-              <div class="card">
-                <img
-                  class="w-50"
-                  src="assets/devicon-plain_notion.svg"
-                  alt=""
-                />
-                <h3>Notion</h3>
               </div>
               <div class="card">
                 <img class="w-50" src="assets/devicon_git.svg" alt="" />
@@ -172,9 +168,26 @@
                 />
                 <h3>Github</h3>
               </div>
+
               <div class="card">
-                <img class="w-50" src="assets/miro.svg" alt="" />
-                <h3>Miro</h3>
+                <img class="w-50" src="assets/vsCode.svg" alt="" />
+                <h3>VS Code</h3>
+              </div>
+              <div class="card">
+                <img class="w-50" src="assets/beekeeper.svg" alt="" />
+                <h3>Beekeeper</h3>
+              </div>
+              <div class="card">
+                <img class="w-50" src="assets/pgAdmin.svg" alt="" />
+                <h3>PostgresSQL</h3>
+              </div>
+              <div class="card">
+                <img class="w-50" src="assets/mySQL.svg" alt="" />
+                <h3>MySQL</h3>
+              </div>
+              <div class="card">
+                <img class="w-50" src="assets/apacheTomcat.svg" alt="" />
+                <h3>Apache-Tomcat</h3>
               </div>
               <div class="card">
                 <img
@@ -185,8 +198,20 @@
                 <h3>Figma</h3>
               </div>
               <div class="card">
-                <img src="assets/logos_intellij-idea.svg" class="w-50" alt="" />
-                <h3>IntelliJ</h3>
+                <img src="assets/springboot.svg" class="w-50" alt="" />
+                <h3>Spring boot</h3>
+              </div>
+              <div class="card">
+                <img src="assets/cPanel.svg" class="w-50" alt="" />
+                <h3>C-Panel</h3>
+              </div>
+              <div class="card">
+                <img src="assets/postman.svg" class="w-50" alt="" />
+                <h3>Postman</h3>
+              </div>
+              <div class="card">
+                <img src="assets/hostinger.svg" class="w-50" alt="" />
+                <h3>Hostinger</h3>
               </div>
             </div>
           </div>
