--- a/services.html
+++ b/services.html
@@ -80,8 +80,35 @@
               journey.
             </h3>
           </div>
+
+          <div class="service-card">
+            <div class="service-name">
+              <img src="assets/springboot.svg" width="50px" alt="" />
+              <h2 class="service-name">Backend Development</h2>
+            </div>
+
+            <h3 class="service-description">
+              I design backend systems that bring your ideas to life—APIs,
+              databases, and authentication built for speed and security. Every
+              service is optimized for scalability and future-ready performance.
+            </h3>
+          </div>
+          <div class="service-card">
+            <div class="service-name">
+              <img src="assets/turbopack.svg" width="50px" alt="" />
+              <h2 class="service-name">Black Box Testing</h2>
+            </div>
+
+            <h3 class="service-description">
+              My Black Box testing identifies hidden issues by evaluating your
+              application’s behavior against requirements. From functionality to
+              performance, I ensure your software works flawlessly for end
+              users.
+            </h3>
+          </div>
           <!-- design card ends -->
         </div>
+
         <h1>Projects</h1>
         <div class="projects">
           <div class="project-card">
