View moew button changed

--- a/index.html
+++ b/index.html
@@ -22,10 +22,8 @@
           My career-based skills have radically evolved overtime and will
           continue to do so.
         </h4>
-        <a href="/myself.html"></a>
-        <button class="view-more-btn">
-          <h4>View More</h4></a>
-        </button>
+
+        <a href="/myself.html" class="view-more-btn"><h4>View More</h4></a>
       </div>
     </div>
     <script src="script.js"></script>
