--- a/contact.html
+++ b/contact.html
@@ -49,8 +49,16 @@
               ><img src="assets/github.svg" alt="" />
               <h3>Github</h3></a
             >
-            <button class="cv">Download CV</button>
+            <a
+              href="https://drive.google.com/file/d/1gVmv_14MS-S1zf4QzPWRl2MrKMLIKRkg/view?usp=sharing"
+              target="_blank"
+              class="cv"
+            >
+              Download CV
+            </a>
+            <!-- <button class="cv">Download CV</button> -->
           </div>
+
           <div class="message">
             <h1>Send me a Message</h1>
             <div class="name-email">
