--- a/achievements.html
+++ b/achievements.html
@@ -23,6 +23,7 @@
         <div class="images">
           <img src="assets/certificates/c1.PNG" alt="" />
           <img src="assets/certificates/c2.PNG" alt="" />
+          <img src="assets/certificates/c11.jpg" alt="" />
           <img src="assets/certificates/c3.PNG" alt="" />
           <img src="assets/certificates/c9.PNG" alt="" />
           <img src="assets/certificates/c4.PNG" alt="" />
