--- a/achievements.html
+++ b/achievements.html
@@ -22,6 +22,7 @@
         <h1 class="yellow-heading">Achievements</h1>
         <div class="images">
           <img src="assets/certificates/c1.PNG" alt="" />
+          <img src="assets/certificates/c11.jpeg" alt="" />
           <img src="assets/certificates/c2.PNG" alt="" />
           <img src="assets/certificates/c11.jpg" alt="" />
           <img src="assets/certificates/c3.PNG" alt="" />
